add vertical table+graph subplot example

--- a/_posts/python/table/2015-06-30-table.html
+++ b/_posts/python/table/2015-06-30-table.html
@@ -10,7 +10,7 @@ language: python
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 31
+order: 32
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -542,7 +542,7 @@ order: 31
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[11]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -601,10 +601,95 @@ order: 31
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[11]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/9584.embed" height="530px" width="100%"></iframe>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[19]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
+<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
+<span class="kn">from</span> <span class="nn">plotly.tools</span> <span class="kn">import</span> <span class="n">FigureFactory</span> <span class="k">as</span> <span class="n">FF</span>
+
+<span class="c"># Add table data</span>
+<span class="n">table_data</span> <span class="o">=</span> <span class="p">[[</span><span class="s">&#39;Team&#39;</span><span class="p">,</span> <span class="s">&#39;Wins&#39;</span><span class="p">,</span> <span class="s">&#39;Losses&#39;</span><span class="p">,</span> <span class="s">&#39;Ties&#39;</span><span class="p">],</span>
+              <span class="p">[</span><span class="s">&#39;Montréal&lt;br&gt;Canadiens&#39;</span><span class="p">,</span> <span class="mi">18</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span>
+              <span class="p">[</span><span class="s">&#39;Dallas Stars&#39;</span><span class="p">,</span> <span class="mi">18</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span>
+              <span class="p">[</span><span class="s">&#39;NY Rangers&#39;</span><span class="p">,</span> <span class="mi">16</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span> 
+              <span class="p">[</span><span class="s">&#39;Boston&lt;br&gt;Bruins&#39;</span><span class="p">,</span> <span class="mi">13</span><span class="p">,</span> <span class="mi">8</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span>
+              <span class="p">[</span><span class="s">&#39;Chicago&lt;br&gt;Blackhawks&#39;</span><span class="p">,</span> <span class="mi">13</span><span class="p">,</span> <span class="mi">8</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span>
+              <span class="p">[</span><span class="s">&#39;Ottawa&lt;br&gt;Senators&#39;</span><span class="p">,</span> <span class="mi">12</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">0</span><span class="p">]]</span>
+<span class="c"># Initialize a figure with FF.create_table(table_data)</span>
+<span class="n">figure</span> <span class="o">=</span> <span class="n">FF</span><span class="o">.</span><span class="n">create_table</span><span class="p">(</span><span class="n">table_data</span><span class="p">,</span> <span class="n">height_constant</span><span class="o">=</span><span class="mi">60</span><span class="p">)</span>
+
+<span class="c"># Add graph data</span>
+<span class="n">teams</span> <span class="o">=</span> <span class="p">[</span><span class="s">&#39;Montréal Canadiens&#39;</span><span class="p">,</span> <span class="s">&#39;Dallas Stars&#39;</span><span class="p">,</span> <span class="s">&#39;NY Rangers&#39;</span><span class="p">,</span>
+         <span class="s">&#39;Boston Bruins&#39;</span><span class="p">,</span> <span class="s">&#39;Chicago Blackhawks&#39;</span><span class="p">,</span> <span class="s">&#39;Ottawa Senators&#39;</span><span class="p">]</span>
+<span class="n">GFPG</span> <span class="o">=</span> <span class="p">[</span><span class="mf">3.54</span><span class="p">,</span> <span class="mf">3.48</span><span class="p">,</span> <span class="mf">3.0</span><span class="p">,</span> <span class="mf">3.27</span><span class="p">,</span> <span class="mf">2.83</span><span class="p">,</span> <span class="mf">2.45</span><span class="p">,</span> <span class="mf">3.18</span><span class="p">]</span>
+<span class="n">GAPG</span> <span class="o">=</span> <span class="p">[</span><span class="mf">2.17</span><span class="p">,</span> <span class="mf">2.57</span><span class="p">,</span> <span class="mf">2.0</span><span class="p">,</span> <span class="mf">2.91</span><span class="p">,</span> <span class="mf">2.57</span><span class="p">,</span> <span class="mf">2.14</span><span class="p">,</span> <span class="mf">2.77</span><span class="p">]</span>
+<span class="c"># Make traces for graph</span>
+<span class="n">trace1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">teams</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">GFPG</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s">&#39;bar&#39;</span><span class="p">,</span>
+                    <span class="n">marker</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;#0099ff&#39;</span><span class="p">),</span>
+                    <span class="n">name</span><span class="o">=</span><span class="s">&#39;Goals For&lt;br&gt;Per Game&#39;</span><span class="p">,</span>
+                    <span class="n">xaxis</span><span class="o">=</span><span class="s">&#39;x2&#39;</span><span class="p">,</span> <span class="n">yaxis</span><span class="o">=</span><span class="s">&#39;y2&#39;</span><span class="p">)</span>
+<span class="n">trace2</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="n">teams</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">GAPG</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="s">&#39;bar&#39;</span><span class="p">,</span>
+                    <span class="n">marker</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;#404040&#39;</span><span class="p">),</span>
+                    <span class="n">name</span><span class="o">=</span><span class="s">&#39;Goals Against&lt;br&gt;Per Game&#39;</span><span class="p">,</span>
+                    <span class="n">xaxis</span><span class="o">=</span><span class="s">&#39;x2&#39;</span><span class="p">,</span> <span class="n">yaxis</span><span class="o">=</span><span class="s">&#39;y2&#39;</span><span class="p">)</span>
+
+<span class="c"># Add trace data to figure</span>
+<span class="n">figure</span><span class="p">[</span><span class="s">&#39;data&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">extend</span><span class="p">(</span><span class="n">go</span><span class="o">.</span><span class="n">Data</span><span class="p">([</span><span class="n">trace1</span><span class="p">,</span> <span class="n">trace2</span><span class="p">]))</span>
+
+<span class="c"># Edit layout for subplots</span>
+<span class="n">figure</span><span class="o">.</span><span class="n">layout</span><span class="o">.</span><span class="n">yaxis</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;domain&#39;</span><span class="p">:</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="o">.</span><span class="mi">45</span><span class="p">]})</span>
+<span class="n">figure</span><span class="o">.</span><span class="n">layout</span><span class="o">.</span><span class="n">yaxis2</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;domain&#39;</span><span class="p">:</span> <span class="p">[</span><span class="o">.</span><span class="mi">6</span><span class="p">,</span> <span class="mi">1</span><span class="p">]})</span>
+<span class="c"># The graph&#39;s yaxis2 MUST BE anchored to the graph&#39;s xaxis2 and vice versa</span>
+<span class="n">figure</span><span class="o">.</span><span class="n">layout</span><span class="o">.</span><span class="n">yaxis2</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;anchor&#39;</span><span class="p">:</span> <span class="s">&#39;x2&#39;</span><span class="p">})</span>
+<span class="n">figure</span><span class="o">.</span><span class="n">layout</span><span class="o">.</span><span class="n">xaxis2</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;anchor&#39;</span><span class="p">:</span> <span class="s">&#39;y2&#39;</span><span class="p">})</span>
+<span class="n">figure</span><span class="o">.</span><span class="n">layout</span><span class="o">.</span><span class="n">yaxis2</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;title&#39;</span><span class="p">:</span> <span class="s">&#39;Goals&#39;</span><span class="p">})</span>
+<span class="c"># Update the margins to add a title and see graph x-labels. </span>
+<span class="n">figure</span><span class="o">.</span><span class="n">layout</span><span class="o">.</span><span class="n">margin</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;t&#39;</span><span class="p">:</span><span class="mi">75</span><span class="p">,</span> <span class="s">&#39;l&#39;</span><span class="p">:</span><span class="mi">50</span><span class="p">})</span>
+<span class="n">figure</span><span class="o">.</span><span class="n">layout</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;title&#39;</span><span class="p">:</span> <span class="s">&#39;2016 Hockey Stats&#39;</span><span class="p">})</span>
+<span class="c"># Update the height because adding a graph vertically will interact with</span>
+<span class="c"># the plot height calculated for the table</span>
+<span class="n">figure</span><span class="o">.</span><span class="n">layout</span><span class="o">.</span><span class="n">update</span><span class="p">({</span><span class="s">&#39;height&#39;</span><span class="p">:</span><span class="mi">800</span><span class="p">})</span>
+
+<span class="c"># Plot!</span>
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">figure</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;subplot_table&#39;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[19]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/9584.embed" height="800px" width="100%"></iframe>
 </div>
 
 </div>
