--- a/_posts/matplotlib/polynomial-fit/2015-12-13-polynomial-fit-mpl_index.html
+++ b/_posts/matplotlib/polynomial-fit/2015-12-13-polynomial-fit-mpl_index.html
@@ -5,7 +5,7 @@ permalink: matplotlib/polynomial-fits/
 description: Create a polynomial fit / regression in Matplotlib and add a line of best fit to your chart
 layout: base
 thumbnail: thumbnail/polynomial_fit.jpg
-language: python
+language: matplotlib
 page_type: example_index
 has_thumbnail: true
 display_as: fitting_tools
