--- a/_posts/matplotlib/linear-fit/2015-12-13-linear-fit-mpl_index.html
+++ b/_posts/matplotlib/linear-fit/2015-12-13-linear-fit-mpl_index.html
@@ -5,10 +5,10 @@ permalink: matplotlib/linear-fits/
 description: Create a polynomial fit / regression in Matplotlib and add a line of best fit to your chart
 layout: base
 thumbnail: thumbnail/linear_fit.jpg
-language: python
+language: matplotlib
 page_type: example_index
 has_thumbnail: true
 display_as: fitting_tools
 ---
-{% assign examples = site.posts | where:"language","Matplotlib" | where:"suite","linear_fit" | sort: "order" %}
+{% assign examples = site.posts | where:"language","matplotlib" | where:"suite","linear_fit" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
