add python treeplot doc

--- a/_posts/pandas/bar/2015-04-09-0pandas-bar-layout.html
+++ b/_posts/pandas/bar/2015-04-09-0pandas-bar-layout.html
@@ -1,5 +1,5 @@
 ---
-name: Basic Bar Chart
+name: Basic Stacked Bar Chart
 plot_url: https://plot.ly/~chelsea_lyn/10117
 language: pandas
 suite: bar
