update thumbnail name for treeplots

--- a/_posts/python/tree-plot/2015-06-30-tree-plot.html
+++ b/_posts/python/tree-plot/2015-06-30-tree-plot.html
@@ -3,7 +3,7 @@ permalink: python/tree-plots
 description: How to make interactive tree-plot in Python with Plotly. An examples of a tree-plot in Plotly.
 title: Python Tree-plots | plotly
 has_thumbnail: true
-thumbnail: /images/treeplot.png
+thumbnail: thumbnail/treeplot.jpg
 layout: user-guide
 name: Tree-plots
 language: python
