Minor changes in the fitting-tools

--- a/_posts/python/exponential-fit/2015-12-13-exponential-fit.html
+++ b/_posts/python/exponential-fit/2015-12-13-exponential-fit.html
@@ -36,14 +36,16 @@ trace1 = go.Scatter(
                   x=x, 
                   y=y, 
                   mode='markers',
-                  marker=go.Marker(color='rgb(255, 127, 14)')
+                  marker=go.Marker(color='rgb(255, 127, 14)'),
+                  name='Data'
                   )
 
 trace2 = go.Scatter(
                   x=xx, 
                   y=yy, 
                   mode='lines',
-                  marker=go.Marker(color='rgb(31, 119, 180)')
+                  marker=go.Marker(color='rgb(31, 119, 180)'),
+                  name='Fit'
                   )
 
 annotation = go.Annotation(
@@ -51,7 +53,6 @@ annotation = go.Annotation(
                   y=100,
                   text='$\textbf{Fit}: 163.56e^{-0.00097x} - 1.16$',
                   showarrow=False
-#                 font=go.Font(size=18)
                   )
 layout = go.Layout(
                 title='Exponential Fit in Python',
