--- a/_posts/python/linear-fit/2015-12-13-linear-fit.html
+++ b/_posts/python/linear-fit/2015-12-13-linear-fit.html
@@ -32,22 +32,24 @@ trace1 = go.Scatter(
                   x=xi, 
                   y=y, 
                   mode='markers',
-                  marker=go.Marker(color='rgb(255, 127, 14)')
+                  marker=go.Marker(color='rgb(255, 127, 14)'),
+                  name='Data'
                   )
 
 trace2 = go.Scatter(
                   x=xi, 
                   y=line, 
                   mode='lines',
-                  marker=go.Marker(color='rgb(31, 119, 180)')
+                  marker=go.Marker(color='rgb(31, 119, 180)'),
+                  name='Fit'
                   )
 
 annotation = go.Annotation(
                   x=3.5,
                   y=23.5,
                   text='$R^2 = 0.9551,\\Y = 0.716X + 19.18$',
-                  showarrow=False
-#                 font=go.Font(size=18)
+                  showarrow=False,
+                  font=go.Font(size=16)
                   )
 layout = go.Layout(
                 title='Linear Fit in Python',
