--- a/_posts/python/polynomial-fit/2015-12-13-polynomial-fit.html
+++ b/_posts/python/polynomial-fit/2015-12-13-polynomial-fit.html
@@ -36,14 +36,16 @@ trace1 = go.Scatter(
                   x=x, 
                   y=y, 
                   mode='markers',
-                  marker=go.Marker(color='rgb(255, 127, 14)')
+                  marker=go.Marker(color='rgb(255, 127, 14)'),
+                  name='Data'
                   )
 
 trace2 = go.Scatter(
                   x=x_new, 
                   y=y_new, 
                   mode='lines',
-                  marker=go.Marker(color='rgb(31, 119, 180)')
+                  marker=go.Marker(color='rgb(31, 119, 180)'),
+                  name='Fit'
                   )
 
 annotation = go.Annotation(
@@ -51,7 +53,6 @@ annotation = go.Annotation(
                   y=-4.5,
                   text='$\textbf{Fit}: 0.43X^3 - 0.56X^2 + 16.78X + 10.61$',
                   showarrow=False
-#                 font=go.Font(size=18)
                   )
 layout = go.Layout(
                 title='Polynomial Fit in Python',
