--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-title: 404
+title: Plot Twist
 ---
 <!DOCTYPE html>
 <html>
@@ -17,7 +17,7 @@ title: 404
             text-align: center;
             min-width: 260px;
             color: #333;
-            padding: 24px;
+            padding: 50px;
         }
         .page404-heading {
             color: #447ADB;
@@ -109,7 +109,7 @@ title: 404
                     <div class="page404-txt">
                        <h3>Plot twist!</h3>
                        <br />
-                       <h5>There's nothing here...</h5>
+                       <h5>There's nothing here...</h5><br />
                        <h5> <a href="help.plot.ly">Back to Plotly Help</a></h5>
 		            </div>
 		        </div>
