--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -48,19 +48,21 @@ redirect_from: /javascript-graphing-library/
   ">
 
 	{% include header.html %}
-
   <div style="
     background-image: linear-gradient(0deg, rgba(100,91,158, 0.89)  0%, rgba(58,124,187, 0.89) 100%);
     width: 100%;
     height: 100%;
   "></div>
-
+  
   <div class="js-splash--banner-container">
     <div class="js-splash--banner-title" style="font-size: 5rem; margin-top: 0; margin-bottom: 2rem; font-weight: 300; font-family:'Open sans',verdana,arial,sans-serif;">plotly.js</div>
     <div class="js-splash--banner-subtitle" style="font-size: 2.2rem; letter-spacing: 0.3px; font-weight: 100;  margin-top: 0; margin-bottom: 2rem; font-weight: 300; font-family:'Open sans',verdana,arial,sans-serif;">The open source JavaScript graphing library that powers plotly</div>
     <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.js&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
   </div>
 </div>
+
+{% include navigation-bar.html %}
+
 
 <div style="position: relative;">
 	<div id="sidebar" class="js-splash--navigation-sidebar">
