updated link for help page

--- a/404.html
+++ b/404.html
@@ -110,7 +110,7 @@ title: Plot Twist
                        <h3>Plot twist!</h3>
                        <br />
                        <h5>There's nothing here...</h5><br />
-                       <h5> <a href="help.plot.ly">Back to Plotly Help</a></h5>
+                       <h5> <a href="http://help.plot.ly">Back to Plotly Help</a></h5>
 		            </div>
 		        </div>
 	        </div>
