modify linear gauge docs

--- a/_posts/python/gauge-chart/2015-06-30-linear-gauge.html
+++ b/_posts/python/gauge-chart/2015-06-30-linear-gauge.html
@@ -10,7 +10,7 @@ language: python
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 30
+order: 31
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -45,7 +45,7 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">plotly</span> <span class="kn">import</span> <span class="n">tools</span>
@@ -68,7 +68,7 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 <span class="n">traces</span> <span class="o">=</span> <span class="p">[]</span>
 <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">scales</span><span class="p">)):</span>
     <span class="n">traces</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span>
-        <span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="mf">0.6</span><span class="p">],</span> <span class="c"># Pad the title - a longer scale title would need a higher value </span>
+        <span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="mf">0.7</span><span class="p">],</span> <span class="c"># Pad the title - a longer scale title would need a higher value </span>
         <span class="n">y</span><span class="o">=</span><span class="p">[</span><span class="mf">6.25</span><span class="p">],</span>
         <span class="n">text</span><span class="o">=</span><span class="n">scales</span><span class="p">[</span><span class="n">i</span><span class="p">],</span>
         <span class="n">mode</span><span class="o">=</span><span class="s">&#39;text&#39;</span><span class="p">,</span>
@@ -102,7 +102,7 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">scales</span><span class="p">)):</span>
     <span class="n">yaxes</span><span class="o">.</span><span class="n">append</span><span class="p">({</span><span class="s">&#39;anchor&#39;</span><span class="p">:</span><span class="s">&#39;x&#39;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="n">i</span><span class="o">+</span><span class="mi">1</span><span class="p">),</span> <span class="s">&#39;range&#39;</span><span class="p">:[</span><span class="o">-.</span><span class="mi">5</span><span class="p">,</span><span class="mf">6.5</span><span class="p">],</span>
                   <span class="s">&#39;showgrid&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span> <span class="s">&#39;showline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span> <span class="s">&#39;zeroline&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
-                  <span class="s">&#39;ticks&#39;</span><span class="p">:</span><span class="s">&#39;inside&#39;</span><span class="p">,</span> <span class="s">&#39;ticklen&#39;</span><span class="p">:</span> <span class="mi">40</span><span class="p">,</span>
+                  <span class="s">&#39;ticks&#39;</span><span class="p">:</span><span class="s">&#39;inside&#39;</span><span class="p">,</span> <span class="s">&#39;ticklen&#39;</span><span class="p">:</span> <span class="mi">35</span><span class="p">,</span>
                   <span class="s">&#39;ticktext&#39;</span><span class="p">:</span><span class="n">scale_labels</span><span class="p">[</span><span class="n">i</span><span class="p">],</span> <span class="s">&#39;tickvals&#39;</span><span class="p">:</span><span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">scale_labels</span><span class="p">[</span><span class="n">i</span><span class="p">]))</span>
                  <span class="p">})</span>
 
@@ -132,7 +132,7 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[&nbsp;]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/10253.embed" height="525px" width="100%"></iframe>
@@ -156,7 +156,7 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">ratings</span> <span class="o">=</span> <span class="p">[</span><span class="mf">4.5</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mf">2.75</span><span class="p">]</span>
@@ -174,21 +174,6 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </pre></div>
 
 </div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
-
-<div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/10255.embed" height="525px" width="100%"></iframe>
-</div>
-
-</div>
-
 </div>
 </div>
 
