--- a/_posts/python/gauge-chart/2015-06-30-linear-gauge.html
+++ b/_posts/python/gauge-chart/2015-06-30-linear-gauge.html
@@ -55,7 +55,7 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">plotly</span> <span class="kn">import</span> <span class="n">tools</span>
@@ -120,39 +120,44 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 
 <span class="c"># Put all elements of the layout together</span>
 <span class="n">layout</span> <span class="o">=</span> <span class="p">{</span><span class="s">&#39;shapes&#39;</span><span class="p">:</span> <span class="n">shapes</span><span class="p">,</span>
-          <span class="s">&#39;xaxis1&#39;</span><span class="p">:</span><span class="n">xaxes</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span>
-          <span class="s">&#39;xaxis2&#39;</span><span class="p">:</span><span class="n">xaxes</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span>
-          <span class="s">&#39;xaxis3&#39;</span><span class="p">:</span><span class="n">xaxes</span><span class="p">[</span><span class="mi">2</span><span class="p">],</span>
-          <span class="s">&#39;xaxis4&#39;</span><span class="p">:</span><span class="n">xaxes</span><span class="p">[</span><span class="mi">3</span><span class="p">],</span>
-          <span class="s">&#39;yaxis1&#39;</span><span class="p">:</span><span class="n">yaxes</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span>
-          <span class="s">&#39;yaxis2&#39;</span><span class="p">:</span><span class="n">yaxes</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span>
-          <span class="s">&#39;yaxis3&#39;</span><span class="p">:</span><span class="n">yaxes</span><span class="p">[</span><span class="mi">2</span><span class="p">],</span>
-          <span class="s">&#39;yaxis4&#39;</span><span class="p">:</span><span class="n">yaxes</span><span class="p">[</span><span class="mi">3</span><span class="p">],</span>
-          <span class="s">&#39;width&#39;</span><span class="p">:</span><span class="n">chart_width</span>
+          <span class="s">&#39;xaxis1&#39;</span><span class="p">:</span> <span class="n">xaxes</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span>
+          <span class="s">&#39;xaxis2&#39;</span><span class="p">:</span> <span class="n">xaxes</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span>
+          <span class="s">&#39;xaxis3&#39;</span><span class="p">:</span> <span class="n">xaxes</span><span class="p">[</span><span class="mi">2</span><span class="p">],</span>
+          <span class="s">&#39;xaxis4&#39;</span><span class="p">:</span> <span class="n">xaxes</span><span class="p">[</span><span class="mi">3</span><span class="p">],</span>
+          <span class="s">&#39;yaxis1&#39;</span><span class="p">:</span> <span class="n">yaxes</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span>
+          <span class="s">&#39;yaxis2&#39;</span><span class="p">:</span> <span class="n">yaxes</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span>
+          <span class="s">&#39;yaxis3&#39;</span><span class="p">:</span> <span class="n">yaxes</span><span class="p">[</span><span class="mi">2</span><span class="p">],</span>
+          <span class="s">&#39;yaxis4&#39;</span><span class="p">:</span> <span class="n">yaxes</span><span class="p">[</span><span class="mi">3</span><span class="p">],</span>
+          <span class="s">&#39;autosize&#39;</span><span class="p">:</span> <span class="bp">False</span><span class="p">,</span>
+          <span class="s">&#39;width&#39;</span><span class="p">:</span> <span class="n">chart_width</span><span class="p">,</span>
+          <span class="s">&#39;height&#39;</span><span class="p">:</span> <span class="mi">600</span>
 <span class="p">}</span>
 
 <span class="c">### ADD RATING DATA HERE ###</span>
 
 <span class="n">fig</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">traces</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
-<span class="n">url</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;linear-gauge-layout&#39;</span><span class="p">)</span>
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;linear-gauge-layout&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/10253.embed" height="600px" width="800px"></iframe>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+
 </div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<div>
-    <a href="https://plot.ly/~chelsea_lyn/10253/" target="_blank" title="Layout of Linear-Gauge Chart" style="display: block; text-align: center;"><img src="https://plot.ly/~chelsea_lyn/10253.png" alt="Ideograms" style="max-width: 800px;width: 800px;"  width="800" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chelsea_lyn:10253"  src="https://plot.ly/embed.js" async></script>
+
 </div>
 </div>
-</div>
+
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -166,7 +171,7 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">ratings</span> <span class="o">=</span> <span class="p">[</span><span class="mf">4.5</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mf">2.75</span><span class="p">]</span>
@@ -180,23 +185,26 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
     <span class="p">))</span>
 
 <span class="n">fig</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">traces</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
-<span class="n">url</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;linear-gauge&#39;</span><span class="p">)</span>
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;linear-gauge&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/10255.embed" height="600px" width="800px"></iframe>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+
 </div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<div>
-    <a href="https://plot.ly/~chelsea_lyn/10255/" target="_blank" title="Linear-Gauge Chart" style="display: block; text-align: center;"><img src="https://plot.ly/~chelsea_lyn/10255.png" alt="Ideograms" style="max-width: 800px; width: 800px;"  width="800" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chelsea_lyn:10255"  src="https://plot.ly/embed.js" async></script>
+
 </div>
 </div>
-</div>
+
 </div>{% endraw %}
