Fixed dashboards page

--- a/_posts/2015-08-20-dashboard-index.html
+++ b/_posts/2015-08-20-dashboard-index.html
@@ -25,6 +25,7 @@ layout: langindex
 </div>
 <br>
 
+<div id="industry">
 <h2>By Industry</h2>
 
 <hr>
@@ -102,9 +103,10 @@ layout: langindex
 </a>
 
 </div>
-
+</div>
 <br>
 
+<div id="language">
 <h2>By Data Science Language</h2>
 
 <hr>
@@ -139,7 +141,7 @@ layout: langindex
 </a>
 
 </div>
-
+</div>
 </body>
 	
 </html>
