--- a/_posts/dashboards/2015-08-20-energy.html
+++ b/_posts/dashboards/2015-08-20-energy.html
@@ -4,6 +4,7 @@ name: Energy Monitoring Dashboard
 description: Energy monitoring dashboard with KPIs for electricity usage, solar and wind energy analytics, wind power prospecting and analytics, and more.
 permalink: dashboards/energy-monitoring/
 industry: Energy
+language: dashboard
 background_color: '#b2df8a'
 foreground_color: '#444'
 report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5820
