--- a/_posts/dashboards/2015-08-20-insurance.html
+++ b/_posts/dashboards/2015-08-20-insurance.html
@@ -4,6 +4,7 @@ name: Insurance Dashboard
 description: Insurance dashboard with KPIs for claims analysis, insurance plans customer satisfaction, stochastic modeling for the insurance industry, and more.
 permalink: dashboards/insurance/
 industry: Insurance
+language: dashboard
 background_color: '#1f78b4'
 foreground_color: 'white'
 report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5782
