--- a/_posts/dashboards/2015-08-20-iot.html
+++ b/_posts/dashboards/2015-08-20-iot.html
@@ -4,6 +4,7 @@ name: IoT Raspberry Pi Dashboard
 description: Internet-of-things dashboard of sensor readings streamed from a Rasberry Pi embedded system.
 permalink: dashboards/iot-rasberry-pi/
 industry: Internet of Things
+language: dashboard
 background_color: '#CC0000'
 foreground_color: 'white'
 ---
