--- a/_posts/dashboards/2015-08-20-manufacturing.html
+++ b/_posts/dashboards/2015-08-20-manufacturing.html
@@ -4,6 +4,7 @@ name: Manufacturing SPC Dashboard
 description: Manufacturing dashboard of statistical process control charts and real-time manufacturing sensor data. 
 permalink: dashboards/manufacturing-spc/
 industry: Manufacturing SPC
+language: dashboard
 background_color: '#fdbf6f'
 foreground_color: '#444'
 ---
