--- a/_posts/dashboards/2015-08-20-marketing.html
+++ b/_posts/dashboards/2015-08-20-marketing.html
@@ -4,6 +4,7 @@ name: Marketing Dashboard
 description: Dashboard for marketers. Marketing dashboard has KPIs for lead generation, lead conversion, click-through rate, marketing RoI, and social media analytics.
 permalink: dashboards/marketing-and-web-analytics-dashboard/
 industry: Marketing
+language: dashboard
 background_color: '#fb9a99'
 foreground_color: '#444'
 ---
