--- a/_posts/dashboards/2015-08-20-sales.html
+++ b/_posts/dashboards/2015-08-20-sales.html
@@ -4,6 +4,7 @@ name: Sales Dashboard
 description: Sales dashboard with KPIs for sales call centers, Salesforce analytics, revenue by geography, sales rep, and more. 
 permalink: dashboards/sales/
 industry: Sales
+language: dashboard
 background_color: '#a6cee3'
 foreground_color: '#444'
 ---
