--- a/_posts/dashboards/2015-08-20-weather.html
+++ b/_posts/dashboards/2015-08-20-weather.html
@@ -4,6 +4,7 @@ name: Weather Dashboard
 description: Weather dashboard of meteorological charts and maps. Dashboard charts of temperature, precipication, wind speed, wind direction, and more.
 permalink: dashboards/weather/
 industry: Weather
+language: dashboard
 background_color: 'rgb(31,158,137)'
 foreground_color: 'white'
 ---
