Added nav bar in reference pages, minor fixes

--- a/_posts/r/2015-08-10-plotly-offline.html
+++ b/_posts/r/2015-08-10-plotly-offline.html
@@ -5,7 +5,7 @@ name: Using Plotly Offline with R
 title: Using Plotly Offline with R
 has_thumbnail: false
 thumbnail: /images/static-image
-layout: user-guide
+layout: base
 page_type: u-guide
 language: r
 ---
