fix typo in contour lines

--- a/_posts/python/contour/2015-06-23-contour-lines.html
+++ b/_posts/python/contour/2015-06-23-contour-lines.html
@@ -21,7 +21,7 @@ data = [
            [0, 0.625, 2.5, 5.625, 10]],
         colorscale='Jet',
         contours=dict(
-            coloring='heatmap',
+            coloring='lines',
         ),
     )
 ]
