contour lines typo

--- a/_posts/python/contour/2015-06-23-contour-lines.html
+++ b/_posts/python/contour/2015-06-23-contour-lines.html
@@ -25,4 +25,4 @@ data = [
         ),
     )
 ]
-plot_url = py.plot(data, filename='contour-heatmap')
+plot_url = py.plot(data, filename='contour-lines')
