--- a/_posts/python/privacy/2015-06-30-privacy.html
+++ b/_posts/python/privacy/2015-06-30-privacy.html
@@ -2,11 +2,9 @@
 permalink: python/privacy
 description: How to set the privacy settings of plotly graphs in python.Three examples of different privacy options&#58; public, private and secret.
 title: Public, Private vs Secret Graphs
-has_thumbnail: true
-thumbnail: /images/privacy.png
 layout: user-guide
 language: python
-title: Python Public, Private and Secret Graphs | plotly
+name: Public, Private vs Secret Graphs
 display_as: file_settings
 has_thumbnail: false
 page_type: example_index
