mv pandas docs that were stuck on python pg

--- a/_posts/python/privacy/2015-06-30-privacy.html
+++ b/_posts/python/privacy/2015-06-30-privacy.html
@@ -2,9 +2,11 @@
 permalink: python/privacy
 description: How to set the privacy settings of plotly graphs in python.Three examples of different privacy options&#58; public, private and secret.
 title: Public, Private vs Secret Graphs
+has_thumbnail: true
+thumbnail: /images/privacy.png
 layout: user-guide
+name: Python Public, Private and Secret Graphs
 language: python
-name: Public, Private vs Secret Graphs
 display_as: file_settings
 has_thumbnail: false
 page_type: example_index
