--- a/_posts/python/privacy/2015-06-30-privacy.html
+++ b/_posts/python/privacy/2015-06-30-privacy.html
@@ -17,7 +17,8 @@ page_type: example_index
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Public,-Private-and-Secret-Graphs-in-Python">Public, Private and Secret Graphs in Python<a class="anchor-link" href="#Public,-Private-and-Secret-Graphs-in-Python">&#182;</a></h1>
+<h1>Public, Private and Secret Graphs <br> in Python</h1>
+
 </div>
 </div>
 </div>
@@ -26,7 +27,7 @@ page_type: example_index
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Make sure you have the latest Plotly</p>
+<p>Make sure you have an updated version of Plotly</p>
 
 </div>
 </div>
@@ -306,7 +307,7 @@ page_type: example_index
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Making-ALL-of-your-Plotly-Plots-Private">Making <b>ALL</b> of your Plotly Plots Private<a class="anchor-link" href="#Making-ALL-of-your-Plotly-Plots-Private">&#182;</a></h2>
+<h2 id="Making-ALL-of-your-Plotly-Plots-Private">Making <b>ALL</b> of your Plotly Plots Private<a class="anchor-link" href="#Making-ALL-of-your-Plotly-Plots-Private">&#182;</a></h2><h4 id="This-example-uses-Plotly's-REST-API">This example uses <a href="https://api.plot.ly/v2/">Plotly's REST API</a><a class="anchor-link" href="#This-example-uses-Plotly's-REST-API">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -321,7 +322,7 @@ page_type: example_index
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">json</span>
@@ -368,7 +369,8 @@ page_type: example_index
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Collect-filenames-of-ALL-of-your-plots-and-update-world_readable-of-each-plot-with-a-PATCH-request">Collect filenames of <b>ALL</b> of your plots and update <code>world_readable</code> of each plot with a PATCH request<a class="anchor-link" href="#Collect-filenames-of-ALL-of-your-plots-and-update-world_readable-of-each-plot-with-a-PATCH-request">&#182;</a></h5>
+<h5>Collect filenames of <b>ALL</b> of your plots and <br>update <code>world_readable</code> of each plot with a PATCH request</h5>
+
 </div>
 </div>
 </div>
